<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:layout_marginBottom="1dp"
    android:layout_marginTop="1dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/tv_circle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_book_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/default_book_name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_circle" />

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/default_author_name"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_book_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_name" />

        <TextView
            android:id="@+id/tv_book_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/default_book_type"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_author_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_name"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/tv_author_name"/>


    </android.support.constraint.ConstraintLayout>
</LinearLayout>